fix(dropdown): disable text selection in dropdowns

--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -29,7 +29,8 @@
   outline: none;
   text-align: left;
   transition: @transition;
-
+  user-select: none;
+  
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
